# projeto-orientado-2-sintetizador-de-udio-alfecjo

./: CMakeLists.txt  README.md  i2c_setup.c  oled_setup.c
include/: i2c_setup.h  oled_setup.h
